build: enable native access in distribution