@@ -13,6 +13,8 @@ compose {
             javaHome = javaToolchains.compilerFor { languageVersion.set(JavaLanguageVersion.of(22)) }.get().executablePath.asFile.parentFile.parent
             mainClass = "com.gw2tb.manager.MainKt"
 
+            jvmArgs("--enable-native-access=ALL-UNNAMED")
+
             nativeDistributions {
                 modules(
                     "java.management",
